--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,4 @@ multipart = "0.17.1"
 mime_guess = "2.0.3"
 tungstenite = { version = "0.12.0", features = ["tls"] }
 url = "2.2.0"
+open = "1.4.0"
