--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,11 +10,10 @@ edition = "2018"
 lazy_static = "1.4.0"
 crossterm = "0.18"
 tui = { version = "0.14", default-features = false, features = ['crossterm'] }
-ureq = { version = "2.0.1", features = ["json", "tls"] }
-rustls = { version = "0.19.0", features = ["dangerous_configuration"] }
-webpki = "*"
 serde = { version = "1.0.118", features = ["derive"] }
 serde_json = "1.0"
+reqwest = { version = "0.11.0", features = ["native-tls", "blocking", "gzip", "multipart"] }
+native-tls = "0.2.7"
 textwrap = "0.13.2"
 unicode-segmentation = "1.7.1"
 chrono = "0.4.19"
