--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2018"
 [dependencies]
 lazy_static = "1.4.0"
 crossterm = "0.18"
-tui = { version = "0.14", default-features = false, features = ['crossterm'] }
+tui = { version = "0.14", default-features = false, features = ['crossterm', 'serde'] }
 serde = { version = "1.0.118", features = ["derive"] }
 serde_json = "1.0"
 reqwest = { version = "0.11.0", features = ["native-tls", "blocking", "gzip", "multipart"] }
@@ -17,8 +17,7 @@ native-tls = "0.2.7"
 textwrap = "0.13.2"
 unicode-segmentation = "1.7.1"
 chrono = "0.4.19"
-multipart = "0.17.1"
-mime_guess = "2.0.3"
 tungstenite = { version = "0.12.0", features = ["tls"] }
 url = "2.2.0"
 open = "1.4.0"
+toml = "0.5.8"
