--- a/example-config.toml
+++ b/example-config.toml
@@ -1,6 +1,4 @@
-# You must include all of the following fields in this toml file, if it exists. If you don't, it won't be parsed.
-
-host = "192.168.0.180"
+host = "192.168.0.196"
 fallback_host = "10.37.68.248"
 server_port = 8741
 socket_port = 8740
@@ -10,10 +8,10 @@ notifications = true
 authenticated = false
 
 password = "toor"
-colorscheme = "rose-pine"
+colorscheme = "dracula"
 
-current_chat_indicator = ">"
-unread_chat_indicator = "•"
+chat_indicator = ">"
+unread_indicator = "•"
 
 my_chat_end = "⧹▏"
 their_chat_end = "▕⧸"
@@ -29,4 +27,3 @@ compose_title = "| message: |"
 poll_exit = 10
 timeout = 10
 show_help = false
-config_file = "~/.config/smserver/smserver.toml"
