--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,19 +8,19 @@ edition = "2018"
 
 [dependencies]
 lazy_static = "1.4.0"
-crossterm = "0.18"
+crossterm = "0.19.0"
 tui = { version = "0.14", default-features = false, features = ['crossterm', 'serde'] }
-serde = { version = "1.0.118", features = ["derive"] }
-serde_json = "1.0"
-reqwest = { version = "0.11.0", features = ["native-tls", "blocking", "gzip", "multipart"] }
+serde = { version = "1.0.125", features = ["derive"] }
+serde_json = "1.0.64"
+reqwest = { version = "0.11.2", features = ["native-tls", "blocking", "gzip", "multipart"] }
 native-tls = "0.2.7"
-textwrap = "0.13.2"
+textwrap = "0.13.4"
 unicode-segmentation = "1.7.1"
 chrono = "0.4.19"
-tungstenite = { version = "0.12.0", features = ["tls"] }
-url = "2.2.0"
-open = "1.4.0"
+tungstenite = { version = "0.13.0", features = ["native-tls"] }
+url = "2.2.1"
+open = "1.6.0"
 toml = "0.5.8"
 dirs = "3.0.1"
-notify-rust = { version = "4.2.2", features = ["image"] }
+notify-rust = { version = "4.3.0", features = ["image"] }
 unicode-width = "0.1.8"
