--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,4 @@ tokio = { version = "1.6.0", features = ["full"] }
 anyhow = "1.0.40"
 futures = "0.3.15"
 futures-locks = "0.6"
+clipboard = "0.5.0"
