--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ sdk = { package = "smserver-rs-sdk", path = "./smserver-rs-sdk" }
 tokio = { version = "1.12.0", features = ["macros", "rt-multi-thread"] }
 anyhow = "1.0.44"
 clipboard = "0.5.0"
+crossbeam-channel = "0.5.4"
 
 [profile.release]
 opt-level = 2
